[gd_scene load_steps=2 format=3 uid="uid://bpnt7sbv577ni"]

[ext_resource type="Script" path="res://source/ui/main_menu.gd" id="1_t4u40"]

[node name="Main Menu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t4u40")

[node name="Main Menu Buttons" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu Buttons"]
layout_mode = 2

[node name="HostButton" type="Button" parent="Main Menu Buttons/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Host Server"

[node name="HBoxContainer" type="HBoxContainer" parent="Main Menu Buttons/VBoxContainer"]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="Main Menu Buttons/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Connect to Server"

[node name="ConnectServerIP" type="LineEdit" parent="Main Menu Buttons/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 14)
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "192.168.xxx.xxx"

[node name="CreditButton" type="Button" parent="Main Menu Buttons/VBoxContainer"]
layout_mode = 2
text = "Credits"

[connection signal="pressed" from="Main Menu Buttons/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Main Menu Buttons/VBoxContainer/HBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="text_changed" from="Main Menu Buttons/VBoxContainer/HBoxContainer/ConnectServerIP" to="." method="_on_connect_server_ip_text_changed"]
[connection signal="pressed" from="Main Menu Buttons/VBoxContainer/CreditButton" to="." method="_on_credit_button_pressed"]
